--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,10 +15,14 @@
     "@reduxjs/toolkit": "^1.9.5",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.4.11",
+    "i18next": "^23.4.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.0.3",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
