--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@react-google-maps/api": "^2.19.2",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.4.11",
